--- a/checkmyproducts-front/package.json
+++ b/checkmyproducts-front/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "chart.js": "^2.9.3",
+    "d3": "3.5.5",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
